Increase max memory to a reasonable level.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9224 13f79535-47bb-0310-9956-ffa450edef68

--- a/scratchpad/forrestdoc/build.xml
+++ b/scratchpad/forrestdoc/build.xml
@@ -93,7 +93,8 @@
       <java classname="org.apache.forrest.forrestdoc.java.src.Pass1"
              fork="true"
              dir="."
-             failonerror="true">
+             failonerror="true"
+             maxmemory="256m">
          <sysproperty key="recurse" value="true" />
          <sysproperty  key="title" value="Java Code Documentation" />
          <sysproperty key="outdir" path="${target.javasrc.dir}" />
@@ -104,7 +105,8 @@
       <java classname="org.apache.forrest.forrestdoc.java.src.Pass2"
             fork="true"
             dir="."
-            failonerror="true">
+            failonerror="true"
+            maxmemory="256m">
          <sysproperty key="recurse" value="true" />
          <sysproperty key="title" value="Java Code Documentation" />
          <sysproperty key="outdir" path="${target.javasrc.dir}" />
